using MikeyaWarehouse.Domain.Common.Abstract;

namespace MikeyaWarehouse.Domain.Common.ValueObjects;

public record BarCode(int Id, string Text);
